--- a/fe/package.json
+++ b/fe/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~8.0.1",
     "@angular/service-worker": "~8.0.1",
     "hammerjs": "^2.0.8",
+    "mapbox-gl": "^1.3.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
