--- a/fe/package.json
+++ b/fe/package.json
@@ -24,6 +24,9 @@
     "@angular/pwa": "^0.803.4",
     "@angular/router": "~8.0.1",
     "@angular/service-worker": "~8.0.1",
+    "@turf/along": "^6.0.1",
+    "@turf/length": "^6.0.2",
+    "@turf/turf": "^5.1.6",
     "hammerjs": "^2.0.8",
     "mapbox-gl": "^1.3.1",
     "rxjs": "~6.4.0",
