--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+google.api.uri=https://maps.googleapis.com/maps/api/place/findplacefromtext/json
+google.api.research.radius=25000
+google.api.key=AIzaSyDzVX3NF9WX4ePHlnq-V1TpN-Hn0-rYQmw
+ip-registry.api.uri=https://api.ipregistry.co/
+ip-registry.api.key=frb53aezhhz5qv
