--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -3,3 +3,4 @@ google.api.research.radius=25000
 google.api.key=AIzaSyDzVX3NF9WX4ePHlnq-V1TpN-Hn0-rYQmw
 ip-registry.api.url=https://api.ipregistry.co/
 ip-registry.api.key=frb53aezhhz5qv
+iatageo.api.url=http://iatageo.com/
