--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -4,3 +4,12 @@ google.api.key=AIzaSyDzVX3NF9WX4ePHlnq-V1TpN-Hn0-rYQmw
 ip-registry.api.url=https://api.ipregistry.co/
 ip-registry.api.key=frb53aezhhz5qv
 iatageo.api.url=http://iatageo.com/
+darksky.api.url=https://api.darksky.net/forecast/
+darksky.api.key=fe7312450253bddda48e2d2eec3cd04c
+
+spring.data.mongodb.uri=mongodb+srv://marcus:marcus17!@hackyeah-vtbai.azure.mongodb.net/?streamType=netty&ssl=true
+
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=lot
+spring.data.mongodb.authentication-database=admin
+
